refactor: rename project from ai-browser-devtools to clueprint
- Updated project references in CLI commands and MCP server.
- Refactored Toast and RegionPicker components for improved UI and functionality.
- Removed unused base.css and integrated styles directly into components.
- Enhanced element and region report formatting with additional accessibility information.
- Introduced prompt definitions for better user interaction in MCP server.
- Cleaned up Tailwind CSS configuration by removing glassmorphism styles.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-browser-devtools",
+  "name": "clueprint",
   "version": "0.1.0",
   "private": true,
   "description": "Chrome extension + MCP server for AI-assisted browser debugging",
