--- a/packages/chrome-extension/manifest.json
+++ b/packages/chrome-extension/manifest.json
@@ -11,7 +11,6 @@
   "permissions": [
     "activeTab",
     "alarms",
-    "notifications",
     "scripting",
     "storage",
     "tabs"
@@ -57,7 +56,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["styles/overlay.css"],
+      "resources": ["styles/overlay.css", "content/page-detect.js"],
       "matches": ["<all_urls>"]
     }
   ]
